Fixed Native support feature issue.