@@ -48,6 +48,7 @@
         <jruby.version>9.3.2.0</jruby.version>
 
         <graalvm.version>21.3.0</graalvm.version>
+        <graalvm.plugin.version>21.2.0</graalvm.plugin.version>
         <mainClass></mainClass>
         <imageName></imageName>
     </properties>
@@ -344,6 +345,7 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
                             <argLine>
+                                --add-opens java.net.http/jdk.internal.net.http.common=ALL-UNNAMED
                                 -Dpolyglot.js.nashorn-compat=true
                                 -agentlib:native-image-agent=access-filter-file=${project.basedir}/src/main/resources/META-INF/native-image/com.ecfront.dew/common/agent-access-filter.json,config-output-dir=${project.basedir}/src/main/resources/META-INF/native-image/com.ecfront.dew/common/
                             </argLine>
@@ -352,7 +354,7 @@
                     <plugin>
                         <groupId>org.graalvm.nativeimage</groupId>
                         <artifactId>native-image-maven-plugin</artifactId>
-                        <version>${graalvm.version}</version>
+                        <version>${graalvm.plugin.version}</version>
                         <executions>
                             <execution>
                                 <goals>
